add cs224n chapter week 2

--- a/_posts/cs224n/w1/2021-09-27-skip-gram.md
+++ b/_posts/cs224n/w1/2021-09-27-skip-gram.md
@@ -3,7 +3,9 @@ title: Skip-gram
 key: 20210713
 tags: CS224N
 ---
-### Intro
+**All contents is arranged from [CS224N](https://online.stanford.edu/artificial-intelligence/free-content?category=All&course=6097) contents. Please see the details to the [CS224N](https://online.stanford.edu/artificial-intelligence/free-content?category=All&course=6097)!**
+
+## 1. Intro
 
 - Create a model such that given the center word "jumped", the model will be able to predict or generate the surrounding words "The", "cat", "over", "the", "puddle".
     
@@ -17,7 +19,7 @@ tags: CS224N
 - The output vectors as $y^{(j)}$.
 - We define V and U the same as in [CBOW](/2021/09/27/continuous-back-of-words).
 
-### Steps
+## 2. Steps
 
 1. Generate one hot input vector
     
@@ -33,7 +35,7 @@ tags: CS224N
 - Invoke a Naive Bayes assumption to break out the probabilities. If you have not seen this before, then simply put, it is a strong (naive) conditional independence assumption. In other words, given the center word, all output words are completely independent.
     
 <p>
-    <img src="/assets/images/cs224n/w1/skipgram/cs224n-2019-notes01-wordvecs1-skip-gram-loss.png" width="200" height="400" class="projects__article__img__center">
+    <img src="/assets/images/post/cs224n/w1/skipgram/cs224n-2019-notes01-wordvecs1-skip-gram-loss.png" width="200" height="400" class="projects__article__img__center">
     <p align="center">
     <em class="projects__img__caption"> Reference. cs224n-2019-notes01-wordvecs1</em>
     </p>
@@ -43,7 +45,7 @@ tags: CS224N
 - With this objective function, we can compute the gradients with respect to the unknown parameters and at each iteration update them via Stochastic Gradient Descent.
     
 <p>
-    <img src="/assets/images/cs224n/w1/skipgram/cs224n-2019-notes01-wordvecs1-skip-gram-grad.png" width="100" height="150" class="projects__article__img__center_small">
+    <img src="/assets/images/post/cs224n/w1/skipgram/cs224n-2019-notes01-wordvecs1-skip-gram-grad.png" width="100" height="150" class="projects__article__img__center_small">
     <p align="center">
     <em class="projects__img__caption"> Reference. cs224n-2019-notes01-wordvecs1</em>
     </p>
