edit thumbnail for 글또를 시작하며 and fixed, float point posts

--- a/_posts/etc/2023-02-05-글또를 시작하며.md
+++ b/_posts/etc/2023-02-05-글또를 시작하며.md
@@ -3,15 +3,15 @@ title: 2023년, 글또 8기를 시작하며
 key: 20230205
 tags: etc
 ---
-### 계기
-회사에 들어온 지 이제 곧 3년차, 그 시간의 대부분은 개발언어와 도메인을 익히는데, 그리고 유학을 준비하는 과정에 사용했었다. 그리고 "기록"이라는 도구가 내게 있어서 문제해결에 가장 큰 도움을 주었기 때문에, 일찍이부터 [성윤님](https://zzsza.github.io/about/) 글을 통해 글또를 알고, 참여하고 싶다고 마음 먹었던 찰나에  타이밍이 좋아 8기에 드디어 들어 올 수 있었다. 
+### Prologue
+ 회사에 들어온 지 이제 곧 3년차, 그 시간의 대부분은 개발언어와 도메인을 익히는데, 그리고 유학을 준비하는 과정에 사용했었다. 그리고 "기록"이라는 도구가 내게 있어서 문제해결에 가장 큰 도움을 주었기 때문에, 일찍이부터 [성윤님](https://zzsza.github.io/about/) 글을 통해 글또를 알고, 참여하고 싶다고 마음 먹었던 찰나에  타이밍이 좋아 8기에 드디어 들어 올 수 있었다. 
 
 <!--more-->
 
-### 목표
-목표는 크게 두 가지 이다. 첫 번째는 그 동안 [혼자 메모해왔던 노트](https://www.notion.so/ooshyun/Seunghyun-Oh-3891a8e850834a8480cf3797cb49916e)는 양이 계속해서 늘어나고, 단 번에 알기 쉬우면서도 누구나 이해하기 쉬운 글로 정리하고 싶었으며, 이제는 주기적으로 포스팅을 올리는 것이다. 그리도 두 번째는, 내가 속해 있는 디지털 신호처리나 임베디드라는 도메인 외에 다양한 개발자들과 소통하고, 동시에 이 다음으로 나가는 스텝을 어디에 둘 것인지 고민하는 것이 목표이다.
+### Goal
+ 목표는 크게 두 가지 이다. 첫 번째는 그 동안 [혼자 메모해왔던 노트](https://www.notion.so/ooshyun/Seunghyun-Oh-3891a8e850834a8480cf3797cb49916e)는 양이 계속해서 늘어나고, 단 번에 알기 쉬우면서도 누구나 이해하기 쉬운 글로 정리하고 싶었으며, 이제는 주기적으로 포스팅을 올리는 것이다. 그리도 두 번째는, 내가 속해 있는 디지털 신호처리나 임베디드라는 도메인 외에 다양한 개발자들과 소통하고, 동시에 이 다음으로 나가는 스텝을 어디에 둘 것인지 고민하는 것이 목표이다.
 
-### 주제
+### Object
 
 $\checkmark$ 신호처리란 무엇일까? 
 
@@ -28,5 +28,5 @@ $\checkmark$ Speech Enhancement를 위한 Machine Learning, 모델 연구에서 
 - 모델 경량화 방법
 - 모델을 hardware에 포팅하기
 
-### 에필로그
+### Epilogue
 남은 6개월, 너무 조급하지도 않게 그리고 너무 느리지도 않게, 꾸준히 이루고자하는 것을 천천히 시작해보자. 글또 8기도 모두 화이팅!
