--- a/_posts/machine-learning/2024-02-17-Pruning-2.md
+++ b/_posts/machine-learning/2024-02-17-Pruning-2.md
@@ -8,6 +8,8 @@ tags: TinyML
 
 앞서서 **MIT에서 Song Han 교수님이 Fall 2022에 한 강의 TinyML and Efficient Deep Learning Computing 6.S965에서** 경량화 기법으로는 Pruning을 정리하고 있다. 지난 글에서는 Granularity와 Criterion에 대해서 나눴다면 이번에는 Ratio, Fine-tuning, Lottery Ticket Hypothesis, System Support를 다뤄보고자 한다.
 
+<!--more-->
+
 첫 번째 내용으로 **Pruning Ratio 부터 시작해보자.**
 
 ## 4. Determine the Pruning Ratio
